Revert "cards on main-display, more-courses, more interests are complete, add back buttons, fixed css issues, visible chat link"

--- a/src/app/main-display/main-display.component.css
+++ b/src/app/main-display/main-display.component.css
@@ -32,14 +32,6 @@ body {
     border-radius: 15px;
 }
 
-.courses{
-    width: 950px;
-}
-
-.interests{
-    width: 950px;
-}
-
 .btn {
     width: 167px;
     height: 48px;
@@ -62,7 +54,6 @@ body {
     height: 55px; 
     margin-right: 30px;
     border-radius: 5px;
-    font-weight: bold;
 }
 
 .title, .more{
@@ -85,7 +76,7 @@ body {
 
 .interest-card{
     width: 180px;
-    height: 180px;
+    height: 98px;
     text-align: center;
     background-color: #FFF8E0;
     padding-block: 4%;
@@ -93,21 +84,15 @@ body {
     margin-right: 30px;
 	margin-bottom: 3rem;
     display: inline-block;
-    
 }
 
 .interest-card .room-name{
     font-size: 20px;
-    font-weight: bold;
-   
-}
-.interest-card p{
-    font-size: 12px;
 }
 
 .course-card{
     width: 180px;
-    height: 240px;
+    height: 160px;
     text-align: center;
     background-color: #FFF8E0;
     padding-block: 6%;
@@ -118,35 +103,10 @@ body {
 }
 
 .course-card .room-name{
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 32px;
 }
 
 .course-card:hover, .interest-card:hover{
     background-color:#faedc1;
     cursor: pointer;
-}
-
-.logolink{
-    text-decoration: none;
-    color: inherit;   transition: transform .2s;
-
-}
-
-.contact{
-    /* background-color:ivory; */
-    display: inline-block;
-    transition: transform .2s;
-}
-
-.contact :hover{
-    background-color: ivory;
-    transform: scale(1.5);
-}
-
-.chat{
-    text-decoration: none;
-    color: inherit;
-    color:rgb(32, 123, 243);
-    font-weight: bold;
 }
